# EuPay-backend

./: .env.example  .gitignore  .npmrc  CONTRIBUTING.md  README.md  VAULT_EVENTS_IMPLEMENTATION.md  package-lock.json  package.json  pr.md  tsconfig.json
.github/workflows/: build.yml  contracts.yml  e2e-tests.yml  outdated-scan.yml
backend/: .env.example  MIGRATIONS.md  package-lock.json  package.json
backend/src/: ai.ts  analytics.ts  delivery.ts  index.ts  metrics.ts  syncer.ts  webhookDlqWorker.ts
contracts/: README_FUZZ.md
contracts/automation_gateway/: Cargo.toml
contracts/common/: Cargo.toml  README.md
contracts/dao_governance/: Cargo.toml
contracts/payroll_receipt/: Cargo.toml
contracts/payroll_stream/: Cargo.toml
contracts/payroll_vault/: Cargo.toml
contracts/workforce_registry/: Cargo.toml
developer-hub/: package-lock.json  package.json
docs/: issue-908.md
src/: index.ts  main.tsx
src/components/: BrandingSettings.tsx  EarningsDisplay.tsx  EarningsForecast.tsx  Helpcenter.tsx  NetworkPill.tsx  NotificationCenter.tsx  PayslipDownloadButton.tsx  PreflightCheckModal.tsx  StreamHistory.tsx  StreamVisualizer.tsx  ThemeToggle.tsx  TransactionProgressOverlay.tsx  VirtualizedTable.tsx
src/context/: SharedClockContext.tsx
src/hooks/: useExport.ts  useInfiniteScroll.ts  usePayroll.ts  useStreamHistory.ts  useTxLifecycle.ts
src/pages/: CreateStream.tsx  StreamTemplates.tsx  WorkerDashboard.tsx
src/providers/: NetworkStatusProvider.tsx  NotificationProvider.tsx  (+2 more)
tests/: reports-virtualization.spec.ts  stream-withdraw.spec.ts
(+63 files in other folders)
