[package]
name = "dao-governance"
version.workspace = true
edition = "2021"
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
quipay_common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]
